--- a/src/app/UI/view-models/respuestas/respuestas.component.html
+++ b/src/app/UI/view-models/respuestas/respuestas.component.html
@@ -1,50 +1,31 @@
-<!-- <style>
-    .deactivate {
-        display: none;
-    }
-    
-    .activate {
-        display: block;
-    }
-</style>
-<div>
+<div class="modal_final" [style]=" visibility_modal_final == 0 ? 'visibility: hidden': 'visibility: visible' ">
+    <div class="container" style="margin-left: 50px;">
+        <div class="container" style="margin-top: 50px; width: 100%;">
+            <div class="container">
+                <div class="container" style="width: 500px; height: 500px; margin-inline: auto; padding-top: 15px;">
+                    <div class="container" id="backg" style='background-color: #eceff1; width: 320px; height: 480px; border-radius: 25px; margin-inline: auto;'>
 
-    <div class="row1-container" *ngFor="let i of collection_de_preguntas">
-        <div class="box orange">
-            <img src="https://assets.codepen.io/2301174/icon-karma.svg" alt="">
-            <h4> Pregunta - {{i.indice}}</h4>
-            <h2>{{i.pregunta}}</h2>
-            <h3>{{i.descripcion}}</h3>
-            <div class="row" style="align-items: center; align-self: center;">
-                <div *ngFor="let j of collection_de_respuestas" class="col-1" style="font-size: 2rem; border: solid orange 1px; width: 70px; margin: 2px;">
-                    {{j}}
-                    <label class="checkbox path">
-                        <input type="checkbox" (change)="onSelect(j, i.respuesta)">
-                        <svg viewBox="0 0 21 21">
-                            <path
-                                d="M5,10.75 L8.5,14.25 L19.4,2.3 C18.8333333,1.43333333 18.0333333,1 17,1 L4,1 C2.35,1 1,2.35 1,4 L1,17 C1,18.65 2.35,20 4,20 L17,20 C18.65,20 20,18.65 20,17 L20,7.99769186">
-                            </path>
-                        </svg>
-                    </label>
+                        <div class="head-alert" style="height: 58%;">
+                            <div class="rocket">
+                                <span class="fins"></span>
+                            </div>
+                            <p class="texto">Registrando tus respuestas</p>
+                        </div>
+                        <div class="body-alert">
+                            <p class="body-info">Total Preguntas: {{collection_de_preguntas_completo.length}}</p>
+                            <p class="body-info">Total Correctas: {{rpta_correcta}}</p>
+                            <p class="body-info">Total Incorrectas: {{rpta_incorrecta}}</p>
+                            <p class="body-info final">Nota Final: {{notafinal}}</p>
+                        </div>
+                        <div class="body-footer" style="text-align-last: center;">
+                            <button class="button-box" [style]="visibility_modal_btn_final == 0 ? 'visibility: hidden': 'visibility: visible'" (click)="retroceder()"> CERRAR </button>
+                        </div>
+                    </div>
                 </div>
-            </div>
-
-            <p class="card__apply" (click)="evaluar()" style="padding: 1vw; border: solid 1px orange; width: 15vw;">
-                <a>Enviar respuesta<i class="fa fa-arrow-right"></i></a></p>
-
-            <div *ngIf="eval == 1" class="alert alert-success activate" role="alert">
-                Esta respuesta es correcta
-            </div>
-
-            <div *ngIf="eval == 2" class="alert alert-danger activate" role="alert">
-                Esta respuesta es incorrecta
             </div>
         </div>
     </div>
-    <p class="card__apply" (click)="guardar()" style="padding: 1vw; border: solid 1px orange; width: 15vw;">
-        <a>Finalizar<i class="fa fa-arrow-right"></i></a></p>
-
-</div> -->
+</div>
 <!-- <app-rpta [rpta]='rpta_modal' [rpta_si_no]='rpta_si_no' (close)=cerrarAlert($event)></app-rpta> -->
 <div class="container" style="max-width: none; height:100vh; padding-top: 20px; background-image: url('https://images.vexels.com/media/users/3/145252/raw/02dabb44e9ba039fe76c8f08dd67172a-lanzamiento-de-cohete-al-espacio-ilustracion.jpg'); background-repeat: no-repeat; background-size: cover;">
     <div class="header">
@@ -63,7 +44,7 @@
                 <div class="card-body" style="background-color: transparent;">
                     <div class="row" style="background-color: transparent;">
                         <div class="col-md-10" style="background-color: transparent;">
-                            <app-steps-preguntas (correct)="evaluar($event)" [preguntas]="collection_de_preguntas_completo"></app-steps-preguntas>
+                            <app-steps-preguntas (correct)="evaluar($event)" [preguntas]="collection_de_preguntas_completo" (finish)="finish($event)"></app-steps-preguntas>
                         </div>
                         <div class="col-md-2">
                             <div class="card border-success mb-1 cardInfo">
