--- a/src/app/UI/common/navbar/navbar.component.html
+++ b/src/app/UI/common/navbar/navbar.component.html
@@ -3,8 +3,6 @@
         <a class="navbar-brand" routerLink="/" style="margin-left: 2%; color: black;">
             <img src="../../../../favicon.ico" alt="E-Learning" style="width: 20px;"> -LEARNING PLATFORM
             <span style="font-size: x-small;"> | {{isRol}} </span>
-            <!-- <span style="font-size: x-small;" *ngIf="!isStudent"> | Docente </span> -->
-            <!-- <span style="font-size: x-small;" *ngIf="isStudent"> | Estudiante </span> -->
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -14,12 +12,12 @@
     <div class="collapse navbar-collapse" id="navbarText" *ngIf="!isStudent" style="color: black; width: 50%; justify-content:right;">
         <ul class="navbar-nav mx-md">
             <li class="nav-item active">
-                <a class="nav-link" routerLink="/" *ngIf="user" style="color: black;">Inicio</a>
+                <a class="nav-link" routerLink="/" *ngIf="!isStudent" style="color: black;">Inicio</a>
             </li>
             <li class="nav-item active" *ngFor="let menu of menus">
-                <a class="nav-link" routerLink="{{menu.ruta}}" *ngIf="user" style="color: black;">{{ menu.nombre }}</a>
+                <a class="nav-link" routerLink="{{menu.ruta}}" *ngIf="!isStudent" style="color: black;">{{ menu.nombre }}</a>
             </li>
-            <li class="nav-item" *ngIf="user" style="padding: 10px;">
+            <li class="nav-item" *ngIf="!isStudent" style="padding: 10px;">
                 <label class="dropdown">
 
                     <div class="dd-button">
@@ -27,11 +25,9 @@
                     </div>
 
                     <input type="checkbox" class="dd-input" id="test">
-
                     <ul class="dd-menu">
-
-                        <li routerLink="/administrar-usuarios" *ngIf="user">Usuarios</li>
-                        <li routerLink="/grados-academicos/Docente" *ngIf="user">Grados</li>
+                        <li routerLink="/administrar-usuarios" *ngIf="!isStudent">Usuarios</li>
+                        <li routerLink="/grados-academicos/Docente" *ngIf="!isStudent">Grados</li>
                         <li class="divider"></li>
                         <li>{{ user?.email}}</li>
 
@@ -39,27 +35,19 @@
 
                 </label>
             </li>
-            <li class="nav-item" *ngIf="user">
-                <a href="#" class="nav-link" (click)="onLogout()" style="margin-left: 0px !important;"> <i alt="Cambiar Perfil" class="fa fa-sign-out" style="color: black;"></i></a>
-            </li>
-        </ul>
 
-        <!-- <button type="button" class="btn btn-success" (click)="changeProfile()" alt="Cambiar Perfil" style="margin-left: 1vw; margin-right: 1vw; background-color: transparent; border: 0px solid transparent;">
-            <i class="fa fa-exchange" alt="Cambiar Perfil" style="color: green;"></i></button> -->
+        </ul>
     </div>
 
     <div class="collapse navbar-collapse" id="navbarText" *ngIf="isStudent" style="color: black; width: 50%; justify-content:right;">
         <ul class="navbar-nav mx-md">
             <li class="nav-item active">
-                <a class="nav-link" routerLink="/practicar" *ngIf="user" style="color: black;">Practicar</a>
+                <a class="nav-link" routerLink="/practicar" *ngIf="isStudent" style="color: black;">Practicar</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" routerLink="/inicio" *ngIf="user" style="color: black;">Home</a>
+                <a class="nav-link" routerLink="/inicio" *ngIf="isStudent" style="color: black;">Home</a>
             </li>
-            <li class="nav-item active">
-                <a class="nav-link" routerLink="/grados-academicos/Estudiante" *ngIf="user" style="color: black;">Grados</a>
-            </li>
-            <li class="nav-item" *ngIf="user">
+            <li class="nav-item" *ngIf="isStudent">
                 <a href="#" class="nav-link" (click)="onLogout()"><i alt="Cambiar Perfil" class="fa fa-sign-out"
                         style="color: black;"></i></a>
             </li>
