--- a/src/app/UI/view-models/administrar-temas/administrar-temas.component.html
+++ b/src/app/UI/view-models/administrar-temas/administrar-temas.component.html
@@ -6,7 +6,7 @@
             <div class="col-sm-10">
             </div>
             <div class="col-sm-2">
-                <button *ngIf="type_user!='Alumno'" style="background-color: hsl(212, 86%, 64%) !important" type="button" class="btn btn-success" (click)="openSave(content)">Agregar</button>
+                <button *ngIf="type_user!='Estudiante'" style="background-color: hsl(212, 86%, 64%) !important" type="button" class="btn btn-success" (click)="openSave(content)">Agregar</button>
             </div>
         </div>
     </div>
