commit cambios en administrar preguntas

--- a/src/app/UI/view-models/administrar-preguntas/administrar-preguntas.component.html
+++ b/src/app/UI/view-models/administrar-preguntas/administrar-preguntas.component.html
@@ -1,9 +1,9 @@
 <div class="container">
-  <h1 class="text-center">Nombre de subtema</h1>
+  <h1 class="text-center">{{subtemaNombre}}</h1>
   <div class="row">
     <div class="col-sm">
-      <div class="bg-info text-white shadow rounded text-center" style="height: 40px">
-        Nombre Curso
+      <div class="bg-info text-white shadow rounded text-center" style="height: 50px">
+        Agregue, edite o elimine preguntas de subtema : {{subtemaNombre}}
       </div>
     </div>
     <div class="col-sm">
