--- a/src/app/UI/view-models/practicar/practicar.component.html
+++ b/src/app/UI/view-models/practicar/practicar.component.html
@@ -3,10 +3,16 @@
         <div *ngFor="let item of collection">
             <div class="row1-container">
                 <div class="box red" style="background-color: white;">
-                    <img src="{{item.imageURL}}" alt="{{item.curso}}" style="width: 10%;">
-                    <h2>{{item.curso}}</h2>
-                    <!-- <p class="card__apply" (click)="navigate(idGrado, item.id, item.curso, type_user)"><a>Ver los Temas<i class="fa fa-edit"></i></a></p> -->
-                    <p class="card__apply" (click)="vertemas(item.id, item.curso)"><a>Ver los Temas<i class="fa fa-edit"></i></a></p>
+                    <div class="container">
+                        <img src="{{item.imageURL}}" alt="{{item.curso}}" style="width: 10%;">
+                        <h2>{{item.curso}}</h2>
+                    </div>
+                    <div class="container " style="display: inline-grid;">
+                        <button (click)="vertemas(item.id, item.curso)" class="aprender"><i class="fas fa-user-astronaut"></i> Practicar Solo</button>
+                        <button (click)="vertemas(item.id, item.curso)" class="aprender"><i class="fa fa-robot"></i> Usar Algoritmo</button>
+                        <!-- <p class="card__apply" (click)="vertemas(item.id, item.curso)"><a>Practicar solo<i class="fa fa-edit"></i></a></p>
+                        <p class="card__apply algoritmo" (click)="vertemasAlgoritmo(item.id, item.curso)"><a>Usar algoritmo<i class="fa fa-robot"></i></a></p> -->
+                    </div>
                 </div>
             </div>
         </div>
