--- a/src/app/UI/view-models/home/componentes/grados/grados.component.html
+++ b/src/app/UI/view-models/home/componentes/grados/grados.component.html
@@ -1,4 +1,9 @@
-<div class="shadow rounded m-3">
-    <h4>1er grado</h4>
-    <p>primaria</p>
+<div class="rounded m-3">
+    <a href="#" class="data-card">
+        <div class="image"></div>
+        <h3>{{infoPerson}}</h3>
+        <h4>{{infoGrado}}</h4>
+        <p>Email: {{infoEmail}}</p>
+        <p>Codigo: <br> {{infoCode}}</p>
+    </a>
 </div>
