--- a/src/app/UI/view-models/practicar-temas/practicar-temas.component.scss
+++ b/src/app/UI/view-models/practicar-temas/practicar-temas.component.scss
@@ -52,8 +52,11 @@
 
 // circulo
 #circulo_green {
-    height: 20px;
-    width: 20px;
+    height: 35px;
+    width: 35px;
+    font-size: 22px;
+    text-align: center;
+    color: white;
     background: green;
     -moz-border-radius: 50px;
     -webkit-border-radius: 50px;
@@ -61,8 +64,10 @@
 }
 
 #circulo_red {
-    height: 20px;
-    width: 20px;
+    height: 35px;
+    width: 35px;
+    font-size: 22px;
+    color: white;
     background: red;
     -moz-border-radius: 50px;
     -webkit-border-radius: 50px;
