--- a/src/app/UI/view-models/practicar/practicar.component.html
+++ b/src/app/UI/view-models/practicar/practicar.component.html
@@ -7,11 +7,9 @@
                         <img src="{{item.imageURL}}" alt="{{item.curso}}" style="width: 10%;">
                         <h2>{{item.curso}}</h2>
                     </div>
-                    <div class="container " style="display: inline-grid;">
-                        <button (click)="vertemas(item.id, item.curso)" class="aprender"><i class="fas fa-user-astronaut"></i> Practicar Solo</button>
-                        <button (click)="vertemas(item.id, item.curso)" class="aprender"><i class="fa fa-robot"></i> Usar Algoritmo</button>
-                        <!-- <p class="card__apply" (click)="vertemas(item.id, item.curso)"><a>Practicar solo<i class="fa fa-edit"></i></a></p>
-                        <p class="card__apply algoritmo" (click)="vertemasAlgoritmo(item.id, item.curso)"><a>Usar algoritmo<i class="fa fa-robot"></i></a></p> -->
+                    <div class="container " style="display: inline-grid; grid-auto-flow: column;">
+                        <button (click)="vertemas(item.id, item.curso, 'solo')" class="aprender"><i class="fas fa-user-astronaut"></i> Practicar Solo</button>
+                        <button (click)="vertemas(item.id, item.curso, 'robot')" class="aprender-robot"><i class="fa fa-robot"></i> Usar Algoritmo</button>
                     </div>
                 </div>
             </div>
