se realiza el reporte para estudiante, docente, administrador

--- a/src/app/UI/view-models/home/componentes/grados/grados.component.html
+++ b/src/app/UI/view-models/home/componentes/grados/grados.component.html
@@ -1,9 +1,7 @@
 <div class="rounded m-3">
-    <a href="#" class="data-card">
+    <a class="data-card">
         <div class="image"></div>
-        <h3>{{infoPerson}}</h3>
-        <h4>{{infoGrado}}</h4>
-        <p>Email: {{infoEmail}}</p>
-        <p>Codigo: <br> {{infoCode}}</p>
+        <h3>{{grado?.grado}} Grado</h3>
+        <h4>{{grado?.nivel}}</h4>        
     </a>
 </div>
