--- a/src/app/UI/view-models/home/componentes/grados/grados.component.scss
+++ b/src/app/UI/view-models/home/componentes/grados/grados.component.scss
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: column;
     max-width: 20.75em;
-    min-height: 20.75em;
+    // min-height: 20.75em;
     overflow: hidden;
     border-radius: .5em;
     text-decoration: none;
@@ -62,6 +62,7 @@
         }
     }
     &:hover {
+        cursor: pointer;
         background: rgb(19, 0, 102);
         transform: scale(1.02);
         h3 {
