--- a/src/app/UI/view-models/home/componentes/listado-estudiantes/listado-estudiantes.component.html
+++ b/src/app/UI/view-models/home/componentes/listado-estudiantes/listado-estudiantes.component.html
@@ -1,1 +1,11 @@
-<p>listado-estudiantes works!</p>
+<form>    
+    <div class="mt-3 row">            
+        <label for="estudiante" class="col-sm-2 col-form-label">Estudiante: </label>        
+        <div class="col-sm-10">
+            <select id="estudiante" class="form-select" (change)="onChange($event)">
+                <option value='' selected>--Seleccionar--</option>
+                <option [value]="item.id" *ngFor="let item of estudiantes">{{item.nombre}}</option>                
+            </select>
+        </div>
+    </div>    
+</form>
