--- a/src/app/UI/view-models/home/componentes/reporte-intentos/reporte-intentos.component.html
+++ b/src/app/UI/view-models/home/componentes/reporte-intentos/reporte-intentos.component.html
@@ -1,1 +1,24 @@
-<p>reporte-intentos works!</p>
+<table class="table table-striped table-hover">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Tema</th>
+        <th scope="col">Fecha Inicio</th>
+        <th scope="col">Hora</th>
+        <th scope="col">Promedio</th>
+        <th scope="col">Buenas</th>
+        <th scope="col">Malas</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of listaIntentos; let i=index" >
+        <td>{{i}}</td>
+        <td>{{item.tema}}</td>
+        <td>{{item.fecha | date:'dd/MM/yyyy'}}</td>
+        <td>{{item.fecha | date:'HH:mm:ss'}}</td>
+        <td>{{item.promedio}}</td>
+        <td>{{item.correctas}}</td>
+        <td>{{item.incorrectas}}</td>
+      </tr>
+    </tbody>
+  </table>
