--- a/src/app/UI/view-models/administrar-temas/administrar-temas.component.scss
+++ b/src/app/UI/view-models/administrar-temas/administrar-temas.component.scss
@@ -156,3 +156,10 @@ a:hover::after {
     align-self: center;
     cursor: pointer;
 }
+.alerta-general{
+    position: -webkit-sticky;
+    position: sticky;
+    width: 80%;
+    left: auto;
+    z-index: 100;
+}
