--- a/src/app/UI/view-models/administrar-temas/administrar-temas.component.html
+++ b/src/app/UI/view-models/administrar-temas/administrar-temas.component.html
@@ -6,7 +6,8 @@
             <div class="col-sm-10">
             </div>
             <div class="col-sm-2">
-                <button *ngIf="type_user!='Estudiante'" style="background-color: hsl(212, 86%, 64%) !important" type="button" class="btn btn-success" (click)="openSave(content)">Agregar</button>
+                <button *ngIf="type_user!='Estudiante'" style="background-color: hsl(212, 86%, 64%) !important"
+                    type="button" class="btn btn-success" (click)="openSave(content)">Agregar</button>
             </div>
         </div>
     </div>
@@ -17,27 +18,40 @@
             <h2>{{item.tema}}</h2>
             <div class="row">
                 <div *ngIf="type_user!='Alumno'" class="col-sm-2">
-                    <p class="card__apply" (click)="openEditar(content, item)"><a>Editar<i style="margin-left: 10px;" class="fa fa-edit" ></i></a></p>
+                    <p class="card__apply" (click)="openEditar(content, item)"><a>Editar<i style="margin-left: 10px;"
+                                class="fa fa-edit"></i></a></p>
                 </div>
                 <div class="col-sm-3">
-                    <p class="card__apply" (click)="navigate(item.id, item.tema, item.orden)"><a>Ver los subtemas<i style="margin-left: 10px;" class="fa fa-eye" ></i></a></p>
+                    <p class="card__apply" (click)="navigate(item.id, item.tema, item.orden)"><a>Ver los subtemas<i
+                                style="margin-left: 10px;" class="fa fa-eye"></i></a></p>
                 </div>
-                <!-- <div class="col-sm-6">
-                <button type="button" class="btn btn-danger" (click)="eliminar(item)">Eliminar</button>
-            </div> -->
+                <div class="col-sm-7 d-flex ">
+                    <button type="button" class="btn btn-danger btn-sm m-3" (click)="eliminar(item,$event)">Eliminar</button>
+                    <div class=" spinner-tema float-start m-3 d-none" >
+                        <div class="spinner-border text-danger " role="status">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                    </div>
+                    
+                    <div class="bg-warning rounded  p-1 m-3 message d-none" role="alert">
+                        Existen Subtemas
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+
 </div>
 
 <ng-template #content let-modal>
-    <div class="col-9">
+    <div class="col">
 
         <div class="modal-header">
             <h4 class="modal-title" id="modal-basic-title">Estudiante create/update</h4>
-            <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-            <span aria-hidden="true">&times;</span>
-        </button>
+            <button type="button" class="close btn btn-primary" aria-label="Close"
+                (click)="modal.dismiss('Cross click')">
+                <span aria-hidden="true">&times;</span>
+            </button>
         </div>
         <div class="modal-body">
             <form>
@@ -52,8 +66,10 @@
             </form>
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btn-outline-dark" (click)="guardarTema()" *ngIf="!actualizar">Guardar</button>
-            <button type="button" class="btn btn-outline-dark" (click)="actualizarTema()" *ngIf="actualizar">Actualizar</button>
+            <button type="button" class="btn btn-outline-dark" (click)="guardarTema()"
+                *ngIf="!actualizar">Guardar</button>
+            <button type="button" class="btn btn-outline-dark" (click)="actualizarTema()"
+                *ngIf="actualizar">Actualizar</button>
         </div>
     </div>
 </ng-template>
