--- a/src/app/UI/view-models/cursos/cursos.component.html
+++ b/src/app/UI/view-models/cursos/cursos.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 
     <div class="header">
-        <h1>5.To grado</h1>
+        <h1>Cursos</h1>
         <!-- <p>{{type_user}}. Aquí tienes una lista de las competencias de matemáticas para los estudiantes en 5.To grado. Estas competencias están clasificadas en categorías</p> -->
     </div>
     <div class="row1-container" *ngFor="let item of collection">
