--- a/src/app/UI/view-models/home/home.component.html
+++ b/src/app/UI/view-models/home/home.component.html
@@ -6,7 +6,7 @@
         <div class="col-md-3">
             <app-grados [grado]="grado" *ngFor="let grado of grados" (click)="seleccionarGrado(grado.id)"></app-grados>
         </div>
-        <div class="col-md-9">
+        <div class="col-md-9 p-5">
             <app-listado-estudiantes *ngIf="validarRol()" [estudiantes]="estudiantes" (codigoEstudiante)="cargaInformacion($event)"></app-listado-estudiantes>
             <hr>
             <ng-container  *ngIf="validarUsuarioSeleccionado(); else elseTemplate">
