commit cambios sistema faltan 2 cosas noma

--- a/src/app/UI/view-models/administrar-preguntas/alternativas/alternativas.component.html
+++ b/src/app/UI/view-models/administrar-preguntas/alternativas/alternativas.component.html
@@ -11,7 +11,7 @@
         </div>
         
     </div>
-    <div class="" *ngIf="tipoPregunta=='pregunta'">
+    <div class="" *ngIf="tipoPregunta=='llenar'">
         <div class="alternativa-pregunta border-bottom border-2 border-success p-1 shadow rounded d-flex float-start m-3" *ngFor="let alternativa of alternativas">
             <div class=" rounded bg-primary border-primary pos-pregunta text-light text-center">
                 {{alternativa.valor}}
